--- a/plugin.xml
+++ b/plugin.xml
@@ -24,7 +24,8 @@
     <!--
     <framework src="com.google.android.gms:play-services-location:11.4.2" />
     -->
-    <framework src="com.google.android.gms:play-services-location:9.8.0" />
+    <preference name="GOOGLE_API_VERSION" default="9.8.0" />
+    <framework src="com.google.android.gms:play-services-location:$GOOGLE_API_VERSION" />
 
   	<config-file target="AndroidManifest.xml" parent="/*">
       <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
